# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-09-10 Michael Truog   <mjtruog at protonmail dot com>

    * Fix CloudI Service API nodes_set discovery ec2
      environment variable substitution
    * Fix README integration-tests configure information

2021-09-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add build_cloudi_version to the CloudI Service API
      code_status output for the current git commit hash
      (releases will have the same value as runtime_cloudi_version)
    * Update jinterface

2021-08-30 Michael Truog   <mjtruog at protonmail dot com>

    * Add boost::stacktrace support for the C++ CloudI API as a
      cross-platform dependency to use instead of booster
      (backward-cpp is still preferred on Linux)
    * Update README dependency package information

2021-08-27 Michael Truog   <mjtruog at protonmail dot com>

    * Improve C/C++ CloudI API backtrace configure check

2021-08-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add the validate_response argument to
      cloudi_service_cron and cloudi_service_send for more
      explicit validation that is configurable
    * Add cloudi_service_shell:validate_response/2
      for default validate_response argument use in
      cloudi_service_cron and cloudi_service_send

2021-08-25 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_send for service request sends that must
      occur based on service configuration argument data
      (e.g., for cloudi_service_api_batch or configuration file use)
    * Remove cloudi_service_filesystem notify functions because
      they were assuming only 1 process existed
    * Fix cloudi_service_filesystem notify_one/notify_all so a
      single pattern matching a single path
      causes a single notification
      (previously an exact pattern for a GET method would affect
       the other methods present causing a notification for each method)
